--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "description": "",
   "dependencies": {
-    "firebase": "^7.6.1"
+    "firebase": "^7.6.1",
+    "nodemailer": "^6.4.2"
   }
 }
