--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "description": "",
   "dependencies": {
     "firebase": "^7.6.1",
+    "firebase-admin": "^8.9.2",
     "google-auth-library": "^5.9.2",
+    "html": "^1.0.0",
     "nodemailer": "^6.4.2"
   }
 }
