--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "description": "",
   "dependencies": {
+    "crypto": "^1.0.1",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.2",
     "google-auth-library": "^5.9.2",
