--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
-    "firebase": "^7.6.1",
+    "firebase": "^7.9.3",
     "firebase-admin": "^8.9.2",
-    "google-auth-library": "^5.9.2",
+    "firebase-auth": "^0.1.2",
+    "google-auth-library": "^5.10.1",
     "html": "^1.0.0",
     "nodemailer": "^6.4.2"
   }
