--- a/package.json
+++ b/package.json
@@ -30,6 +30,20 @@
     "firebase-auth": "^0.1.2",
     "google-auth-library": "^5.10.1",
     "html": "^1.0.0",
-    "nodemailer": "^6.4.2"
+    "nodemailer": "^6.4.2",
+    "@google/maps": "^1.1.0",
+    "alert-node": "^2.1.1",
+    "dont-sniff-mimetype": "^1.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "firebase": "^7.9.3",
+    "helmet": "^3.21.2",
+    "js-md5": "^0.7.3",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.2",
+    "sqlite3": "^4.1.1"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
